--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Kider - Preschool Website Template</title>
+    <title>IELTS & PTE Coaching Center in Jalandhar Cantt | Study Abroad</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
+    
+    <!-- Meta Tags for SEO -->
+    <meta name="keywords" content="IELTS, PTE, English Coaching, Jalandhar Cantt, Score Bands, Study Abroad, Language Training, Test Preparation, Coaching Center, Visa Assistance, Overseas Education">
+    <meta name="description" content="Achieve your desired IELTS & PTE score bands with our expert coaching in Jalandhar Cantt. We offer personalized English training and study abroad guidance to help you succeed.">
+    
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@600&family=Lobster+Two:wght@700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@600&family=Lobster+Two:wght@700&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
